Added all services need to web project

--- a/WeatherHistoryViewer.Web/WeatherHistoryViewer.Web.csproj
+++ b/WeatherHistoryViewer.Web/WeatherHistoryViewer.Web.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherHistoryViewer.Core\WeatherHistoryViewer.Core.csproj" />
+    <ProjectReference Include="..\WeatherHistoryViewer.Db\WeatherHistoryViewer.Db.csproj" />
+    <ProjectReference Include="..\WeatherHistoryViewer.Services\WeatherHistoryViewer.Services.csproj" />
+  </ItemGroup>
+
 </Project>
