--- a/WeatherHistoryViewer.ConsoleApp/appsettings.json
+++ b/WeatherHistoryViewer.ConsoleApp/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection":
-      "Server=(localdb)\\mssqllocaldb;Database=weatherDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
