--- a/WeatherHistoryViewer.APISender/Properties/launchSettings.json
+++ b/WeatherHistoryViewer.APISender/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "currentWeather",
+      "launchUrl": "api/currentWeather",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
