--- a/WeatherHistoryViewer.Web/Properties/launchSettings.json
+++ b/WeatherHistoryViewer.Web/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 {
   "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64674",
-      "sslPort": 44309
+      "applicationUrl": "http://localhost:59406",
+      "sslPort": 44321
     }
   },
   "profiles": {
