Removed old file

--- a/WeatherHistoryViewer.Web/WeatherHistoryViewer.Web.csproj
+++ b/WeatherHistoryViewer.Web/WeatherHistoryViewer.Web.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <Compile Remove="Data\**" />
+    <Compile Remove="wwwroot\js\**" />
     <Content Remove="Data\**" />
+    <Content Remove="wwwroot\js\**" />
     <EmbeddedResource Remove="Data\**" />
+    <EmbeddedResource Remove="wwwroot\js\**" />
     <None Remove="Data\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\js\" />
+    <None Remove="wwwroot\js\**" />
   </ItemGroup>
 
   <ItemGroup>
