--- a/WeatherHistoryViewer.APISender/Properties/launchSettings.json
+++ b/WeatherHistoryViewer.APISender/Properties/launchSettings.json
@@ -14,7 +14,9 @@
       "launchBrowser": true,
       "launchUrl": "api/currentWeather",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       },
       "sqlDebugging": true
     },
@@ -23,7 +25,9 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
