--- a/WeatherHistoryViewer.Web/Properties/launchSettings.json
+++ b/WeatherHistoryViewer.Web/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "VaultUri": "https://weatherhistoryviewerkeys.vault.azure.net/",
         "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       }
     },
@@ -24,7 +24,7 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "VaultUri": "https://weatherhistoryviewerkeys.vault.azure.net/",
         "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       }
     }
