--- a/WeatherHistoryViewer.APISender/Properties/launchSettings.json
+++ b/WeatherHistoryViewer.APISender/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchUrl": "api/currentWeather",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "VaultUri": "https://weatherhistoryvault.vault.azure.net/",
         "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       },
       "sqlDebugging": true
@@ -26,7 +26,7 @@
       "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://weatherhistoryviewer.vault.azure.net/",
+        "VaultUri": "https://weatherhistoryvault.vault.azure.net/",
         "AZURE_USERNAME": "pieterbrandsen2@gmail.com"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
