--- a/WeatherHistoryViewer.Services/WeatherHistoryViewer.Services.csproj
+++ b/WeatherHistoryViewer.Services/WeatherHistoryViewer.Services.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WeatherHistoryViewer.Config\WeatherHistoryViewer.Config.csproj" />
     <ProjectReference Include="..\WeatherHistoryViewer.Core\WeatherHistoryViewer.Core.csproj" />
     <ProjectReference Include="..\WeatherHistoryViewer.Db\WeatherHistoryViewer.Db.csproj" />
   </ItemGroup>
