--- a/WeatherHistoryViewer.UnitTests/WeatherHistoryViewer.UnitTests.csproj
+++ b/WeatherHistoryViewer.UnitTests/WeatherHistoryViewer.UnitTests.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherHistoryViewer.Core\WeatherHistoryViewer.Core.csproj" />
+    <ProjectReference Include="..\WeatherHistoryViewer.Services\WeatherHistoryViewer.Services.csproj" />
+  </ItemGroup>
+
 </Project>
